--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ botocore==1.10.52
 bz2file==0.98
 certifi==2018.4.16
 chardet==3.0.4
+click==6.7
 Cython==0.28.3
+Django==2.0.7
 docutils==0.14
-fasttext==0.8.22
 future==0.16.0
 gensim==3.4.0
 idna==2.7
@@ -14,6 +15,7 @@ jmespath==0.9.3
 numpy==1.14.5
 pybind11==2.2.3
 python-dateutil==2.7.3
+pytz==2018.5
 requests==2.19.1
 s3transfer==0.1.13
 scipy==1.1.0
