--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,42 @@
-scikit-learn
+atlas==0.27.0
 boto==2.48.0
-boto3==1.7.52
-botocore==1.10.52
+boto3==1.7.33
+botocore==1.10.33
 bz2file==0.98
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
-click==6.7
 Cython==0.28.3
 Django==2.0.7
 docutils==0.14
-future==0.16.0
+fasttext==0.8.22
 gensim==3.4.0
-idna==2.7
+idna==2.6
 jmespath==0.9.3
-numpy==1.14.5
+Lasagne==0.2.dev1
+Mako==1.0.7
+MarkupSafe==1.0
+mkl-fft==1.0.5
+mkl-random==1.0.1
+nltk==3.2.4
+numpy==1.15.0
+object-detection==0.1
 pybind11==2.2.3
+pycparser==2.18
+pyemd==0.5.1
+pygpu==0.7.6
 python-dateutil==2.7.3
 pytz==2018.5
-requests==2.19.1
+requests==2.18.4
 s3transfer==0.1.13
+scikit-learn==0.19.2
 scipy==1.1.0
 six==1.11.0
-smart-open==1.6.0
-urllib3==1.23
+slim==0.1
+smart-open==1.5.7
+testfixtures==6.2.0
+Theano==1.0.2
+threadpool==1.3.2
+torch==0.4.1
+urllib3==1.22
+uWSGI==2.0.17.1
