--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,68 @@
-atlas==0.27.0
+asn1crypto==0.24.0
+blinker==1.4
 boto==2.48.0
-boto3==1.7.33
-botocore==1.10.33
+boto3==1.7.52
+botocore==1.10.52
 bz2file==0.98
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
+click==6.7
+cryptography==2.2.1
+cycler==0.10.0
+cymem==1.31.2
 Cython==0.28.3
+cytoolz==0.8.2
+dill==0.2.8.2
 Django==2.0.7
 docutils==0.14
 fasttext==0.8.22
+future==0.16.0
 gensim==3.4.0
-idna==2.6
+idna==2.7
 jmespath==0.9.3
+kiwisolver==1.0.1
 Lasagne==0.2.dev1
 Mako==1.0.7
 MarkupSafe==1.0
-mkl-fft==1.0.5
+matplotlib==2.2.2
+mkl-fft==1.0.4
 mkl-random==1.0.1
-nltk==3.2.4
+msgpack-numpy==0.4.1
+msgpack-python==0.4.8
+murmurhash==0.28.0
+nltk==3.2.5
 numpy==1.15.0
-object-detection==0.1
+oauthlib==2.1.0
+plac==0.9.6
+preshed==1.0.1
 pybind11==2.2.3
 pycparser==2.18
-pyemd==0.5.1
 pygpu==0.7.6
+PyJWT==1.6.4
+pyOpenSSL==18.0.0
+pyparsing==2.2.0
+PySocks==1.6.8
+python-crfsuite==0.9.5
 python-dateutil==2.7.3
 pytz==2018.5
-requests==2.18.4
+regex==2017.11.9
+requests==2.19.1
+requests-oauthlib==0.8.0
 s3transfer==0.1.13
-scikit-learn==0.19.2
+scikit-learn==0.19.1
 scipy==1.1.0
 six==1.11.0
-slim==0.1
-smart-open==1.5.7
-testfixtures==6.2.0
+smart-open==1.6.0
+termcolor==1.1.0
 Theano==1.0.2
-threadpool==1.3.2
+thinc==6.10.2
+toolz==0.9.0
 torch==0.4.1
-urllib3==1.22
+tornado==5.0.2
+tqdm==4.24.0
+twython==3.7.0
+ujson==1.35
+urllib3==1.23
 uWSGI==2.0.17.1
+wrapt==1.10.11
