--- a/thingin_recommender_uwsgi.ini
+++ b/thingin_recommender_uwsgi.ini
@@ -3,27 +3,27 @@
 
 # Django-related settings
 # the base directory (full path)
-chdir           = /home/sw/NLP/Thingin_Adapter
+chdir = /thingin_Adapter
 # Django's wsgi file
-module          = thingin_recommender.wsgi
+module = thingin_recommender.wsgi
 # the virtualenv (full path)
-#home            = /home/sw/anaconda3/envs/nlp
+# home            = /home/sw/anaconda3/envs/nlp
 
 # process-related settings
 # master
-master          = false
+master = true
 # maximum number of worker processes
-processes       = 1
-# the socket (use the full path to be safe
-#socket           = :8001
-socket          = /home/sw/NLP/Thingin_Adapter/thingin_recommender.sock
+processes = 1
+# the socket (use the full path to be safe)
+socket = /thingin_Adapter/thingin_recommender.sock
+
 # ... with appropriate permissions - may be needed
-chmod-socket    = 666
+chmod-socket = 666
 # clear environment on exit
-vacuum          = true
+vacuum = true
 
 max-requests = 5000
 
-#daemonize = /home/sw/NLP/Thingin_Adapter/thingin_recommender.log
+logto = /thingin_Adapter/thingin_recommender.log
 
-
+#  daemonize = /thingin_Adapter/thingin_recommender.log
