--- a/thingin_recommender_uwsgi.ini
+++ b/thingin_recommender_uwsgi.ini
@@ -11,7 +11,7 @@ module = thingin_recommender.wsgi
 
 # process-related settings
 # master
-master = true
+master = false
 # maximum number of worker processes
 processes = 1
 # the socket (use the full path to be safe)
